# whats-your-ride

./: .gitignore  Dockerfile  LICENSE  config.py  docker-compose.yaml  page.html  pyproject.toml  run.py  test_agent.py
docker/: entrypoint.sh
migrations/versions/: 1fe5598138a4_last_touches_before_the_migration.py  3578b8a72563_update_field_lenghts_for_mot_table.py  65e5f1dab2a2_added_cha_session_and_message_session_.py  6b680e0d65b3_add_tables_version_model_brand_for_.py  717ee7a6c4c2_enhancing_version_table.py  8cbdf1eb20b9_add_seat_number_field_to_motorcycle_.py  910ab70bd599_add_more_space_for_strings_in_mot.py  9b53a3c8dbdb_role_enum_implementation.py  9c7d195d63c5_increase_password_hash_length.py  d013f94a8976_adding_motorcycles_table.py  d53ea4a6bd32_initial_migration.py  f1e9ee735997_fix.py
recommender_app/: __init__.py  extensions.py
recommender_app/agents/: README.md  __init__.py  answer_synthesis_agent.py  comparator_agent.py  motorcycle_recommendation_orchestrator_agent.py  ollama_motorcycle_query_agent.py  simple_motorcycle_chat_agent.py  sql_query_generator_agent.py  sql_rag_gate_agent.py
recommender_app/constants/: __init__.py
recommender_app/core/: config.py  logging_config.py  security.py
recommender_app/db_ses/: session.py
recommender_app/interfaces/: auth_repository.py  brand_repository.py  category_repository.py  message_repository.py  model_repository.py  motorcycle_repository.py  query_executor_repository.py  session_repository.py  user_repository.py  version_repository.py
recommender_app/models/: __init__.py  brand.py  category.py  (+6 more)
(+55 files in other folders)
